# build/swagger/swagger-output.json
@@ -6471,210 +6471,184 @@
                 }
             },
             "OrderCreateSchema": {
-                "allOf": [
-                    {
+                "type": [
+                    "object"
+                ],
+                "properties": {
+                    "receiptNumber": {
                         "type": [
-                            "object"
-                        ],
-                        "properties": {
-                            "withProducts": {
-                                "type": [
-                                    "boolean"
-                                ],
-                                "enum": [
-                                    false
-                                ]
-                            },
-                            "totalCost": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "quantity": {
-                                "default": 1,
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "weight": {
-                                "type": [
-                                    "number"
-                                ]
-                            }
-                        },
-                        "required": [
-                            "totalCost"
+                            "string"
                         ]
                     },
-                    {
+                    "clientOrderReceiptId": {
                         "type": [
-                            "object"
+                            "string"
+                        ]
+                    },
+                    "recipientName": {
+                        "default": "غير معرف",
+                        "type": [
+                            "string"
+                        ]
+                    },
+                    "confirmed": {
+                        "type": [
+                            "boolean"
+                        ]
+                    },
+                    "status": {
+                        "default": "REGISTERED",
+                        "type": [
+                            "string"
                         ],
-                        "properties": {
-                            "receiptNumber": {
-                                "type": [
-                                    "string"
-                                ]
-                            },
-                            "clientOrderReceiptId": {
-                                "type": [
-                                    "string"
-                                ]
-                            },
-                            "recipientName": {
-                                "default": "غير معرف",
-                                "type": [
-                                    "string"
-                                ]
-                            },
-                            "confirmed": {
-                                "type": [
-                                    "boolean"
-                                ]
-                            },
-                            "status": {
-                                "default": "REGISTERED",
-                                "type": [
-                                    "string"
-                                ],
-                                "enum": [
-                                    "REGISTERED",
-                                    "READY_TO_SEND",
-                                    "WITH_DELIVERY_AGENT",
-                                    "DELIVERED",
-                                    "REPLACED",
-                                    "PARTIALLY_RETURNED",
-                                    "RETURNED",
-                                    "POSTPONED",
-                                    "CHANGE_ADDRESS",
-                                    "RESEND",
-                                    "WITH_RECEIVING_AGENT",
-                                    "PROCESSING",
-                                    "IN_MAIN_REPOSITORY",
-                                    "IN_GOV_REPOSITORY"
-                                ]
-                            },
-                            "recipientPhones": {
-                                "type": [
-                                    "array"
-                                ],
-                                "items": {
-                                    "type": [
-                                        "string"
-                                    ],
-                                    "minLength": 6
-                                }
-                            },
-                            "recipientPhone": {
-                                "type": [
-                                    "string"
-                                ],
-                                "minLength": 6
-                            },
-                            "recipientAddress": {
-                                "type": [
-                                    "string"
-                                ]
-                            },
-                            "notes": {
-                                "type": [
-                                    "string"
-                                ]
-                            },
-                            "details": {
-                                "type": [
-                                    "string"
-                                ]
-                            },
-                            "deliveryType": {
-                                "default": "NORMAL",
-                                "type": [
-                                    "string"
-                                ],
-                                "enum": [
-                                    "NORMAL",
-                                    "REPLACEMENT"
-                                ]
-                            },
-                            "governorate": {
-                                "type": [
-                                    "string"
-                                ],
-                                "enum": [
-                                    "AL_ANBAR",
-                                    "BABIL",
-                                    "BABIL_COMPANIES",
-                                    "BAGHDAD",
-                                    "BASRA",
-                                    "DHI_QAR",
-                                    "AL_QADISIYYAH",
-                                    "DIYALA",
-                                    "DUHOK",
-                                    "ERBIL",
-                                    "KARBALA",
-                                    "KIRKUK",
-                                    "MAYSAN",
-                                    "MUTHANNA",
-                                    "NAJAF",
-                                    "NINAWA",
-                                    "SALAH_AL_DIN",
-                                    "SULAYMANIYAH",
-                                    "WASIT"
-                                ]
-                            },
-                            "locationID": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "storeID": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "repositoryID": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "branchID": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "clientID": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "inquiryEmployeesIDs": {
-                                "type": [
-                                    "array"
-                                ],
-                                "items": {
-                                    "type": [
-                                        "number"
-                                    ]
-                                }
-                            },
-                            "forwardedCompanyID": {
-                                "type": [
-                                    "number"
-                                ]
-                            },
-                            "weight": {
-                                "type": [
-                                    "number"
-                                ]
-                            }
-                        },
-                        "required": [
-                            "recipientAddress",
-                            "governorate",
-                            "locationID",
-                            "storeID"
+                        "enum": [
+                            "REGISTERED",
+                            "READY_TO_SEND",
+                            "WITH_DELIVERY_AGENT",
+                            "DELIVERED",
+                            "REPLACED",
+                            "PARTIALLY_RETURNED",
+                            "RETURNED",
+                            "POSTPONED",
+                            "CHANGE_ADDRESS",
+                            "RESEND",
+                            "WITH_RECEIVING_AGENT",
+                            "PROCESSING",
+                            "IN_MAIN_REPOSITORY",
+                            "IN_GOV_REPOSITORY"
+                        ]
+                    },
+                    "recipientPhones": {
+                        "type": [
+                            "array"
+                        ],
+                        "items": {
+                            "type": [
+                                "string"
+                            ],
+                            "minLength": 6
+                        }
+                    },
+                    "recipientPhone": {
+                        "type": [
+                            "string"
+                        ],
+                        "minLength": 6
+                    },
+                    "recipientAddress": {
+                        "type": [
+                            "string"
+                        ]
+                    },
+                    "notes": {
+                        "type": [
+                            "string"
+                        ]
+                    },
+                    "details": {
+                        "type": [
+                            "string"
+                        ]
+                    },
+                    "deliveryType": {
+                        "default": "NORMAL",
+                        "type": [
+                            "string"
+                        ],
+                        "enum": [
+                            "NORMAL",
+                            "REPLACEMENT"
+                        ]
+                    },
+                    "governorate": {
+                        "type": [
+                            "string"
+                        ],
+                        "enum": [
+                            "AL_ANBAR",
+                            "BABIL",
+                            "BABIL_COMPANIES",
+                            "BAGHDAD",
+                            "BASRA",
+                            "DHI_QAR",
+                            "AL_QADISIYYAH",
+                            "DIYALA",
+                            "DUHOK",
+                            "ERBIL",
+                            "KARBALA",
+                            "KIRKUK",
+                            "MAYSAN",
+                            "MUTHANNA",
+                            "NAJAF",
+                            "NINAWA",
+                            "SALAH_AL_DIN",
+                            "SULAYMANIYAH",
+                            "WASIT"
+                        ]
+                    },
+                    "locationID": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "storeID": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "repositoryID": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "branchID": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "clientID": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "inquiryEmployeesIDs": {
+                        "type": [
+                            "array"
+                        ],
+                        "items": {
+                            "type": [
+                                "number"
+                            ]
+                        }
+                    },
+                    "forwardedCompanyID": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "weight": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "totalCost": {
+                        "type": [
+                            "number"
+                        ]
+                    },
+                    "quantity": {
+                        "default": 1,
+                        "type": [
+                            "number"
                         ]
                     }
+                },
+                "required": [
+                    "recipientAddress",
+                    "governorate",
+                    "locationID",
+                    "storeID",
+                    "totalCost"
                 ]
             },
             "OrderUpdateSchema": {
